tests/lean/envExtensionSealed.lean.expected.out
2
envExtensionSealed.lean:13:7: error: invalid structure notation source, not a structure
  Lean.privateExt
which has type
  Lean.EnvExtensionInterface.ext Lean.EnvExtensionInterfaceImp Nat
